--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
                 <img class="second" src="img/farsi_text_second_part.webp" alt="">
             </div>
         </div>
+        <select name="wef" id="wef">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
 </body>
 </html>
