--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
             <option value="3">3</option>
             <option value="4">4</option>
         </select>
+
+        <a href="./about.html">About page</a>
 </body>
 </html>
