--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
         </select>
 
         <a href="./about.html">About page</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Test</a>
+        <a href="#">About page</a>
 </body>
 </html>
