--- a/about.html
+++ b/about.html
@@ -8,5 +8,9 @@
 <body>
     <h1>About page</h1>
     <a href="./index.html">Home page</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Test</a>
+    <a href="#">About page</a>
 </body>
 </html>
