--- a/index.html
+++ b/index.html
@@ -32,24 +32,34 @@
     </script>
 </head>
 <body>
-    <div class="container">
-        <div class="box">
-                <img class="first" src="img/farsi_text_first_part.webp" alt="">
-                <img class="star" src="img/icon.webp" alt="">
-                <img class="second" src="img/farsi_text_second_part.webp" alt="">
-            </div>
-        </div>
-        <select name="wef" id="wef">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-        </select>
+    <header>
+        <h1>Your Website</h1>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+   
 
-        <a href="./about.html">About page</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-        <a href="#">Test</a>
-        <a href="#">About page</a>
+    <!-- Benefits Section -->
+    <section id="benefits-section">
+        <h2>Our Advantages</h2>
+        <ul>
+            <li>
+                <a href="./about.html">Quality Service</a>
+            </li>
+            <li>Fast Delivery</li>
+            <li>Customer Satisfaction</li>
+        </ul>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
