--- a/about.html
+++ b/about.html
@@ -43,5 +43,9 @@
         </nav>
     </header>
     <h1>About page</h1>
+
+    <footer>
+        <p>&copy; 2023 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
