--- a/contact.html
+++ b/contact.html
@@ -57,5 +57,9 @@
             <button type="submit">Submit</button>
         </form>
     </section>
+
+    <footer>
+        <p>&copy; 2023 My Website. All rights reserved.</p>
+    </footer>
 </body>
 </html>
