--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+        <p>&copy; 2023 My Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
