--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button type="submit">Submit</button>
+            <button type="button">Submit</button>
         </form>
     </section>
 
