--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 
     <!-- Hotjar Tracking Code for https://aleksandrkononen.github.io/vwo-test/index.html -->
-    <script>
+    <!-- <script>
         (function (h, o, t, j, a, r) {
             h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
             h._hjSettings = { hjid: 3779401, hjsv: 6 };
@@ -32,7 +32,7 @@
             r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-    </script>
+    </script> -->
 </head>
 
 <body>
